--- a/templates/dashboard_1.html
+++ b/templates/dashboard_1.html
@@ -1,32 +1,13 @@
-<!-- templates/index.html -->
+<!-- templates/upload.html -->
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Excel Chart Dashboard</title>
+    <title>Upload Excel File</title>
 </head>
 <body>
     <h1>Upload Excel File</h1>
-
-    {% with messages = get_flashed_messages() %}
-        {% if messages %}
-            <ul class="flashes">
-            {% for message in messages %}
-                <li>{{ message }}</li>
-            {% endfor %}
-            </ul>
-        {% endif %}
-    {% endwith %}
-
-
     <form method="POST" enctype="multipart/form-data">
-        <input type="file" name="file" accept=".xlsx, .xls">
-        <button type="submit">Upload</button>
+        <input type="file" name="file" accept=".xlsx, .xls"> <input type="submit" value="Upload">
     </form>
-
-    <div id="dashboard">
-        {% for chart in charts %}
-            {{ chart | safe }}
-        {% endfor %}
-    </div>
 </body>
 </html>
