--- a/templates/dashboard_1.html
+++ b/templates/dashboard_1.html
@@ -1,13 +1,19 @@
-<!-- templates/upload.html -->
 <!DOCTYPE html>
 <html>
 <head>
     <title>Upload Excel File</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
     <h1>Upload Excel File</h1>
+
+    {% if error %}
+        <p style="color: red;">{{ error }}</p>
+    {% endif %}
+
     <form method="POST" enctype="multipart/form-data">
-        <input type="file" name="file" accept=".xlsx, .xls"> <input type="submit" value="Upload">
+        <input type="file" name="file">
+        <input type="submit" value="Upload">
     </form>
 </body>
 </html>
