Add generated HTML file 2

--- a/templates/dashboard_2.html
+++ b/templates/dashboard_2.html
@@ -1,12 +1,16 @@
-<!-- templates/charts.html -->
+<!-- templates/dashboard.html -->
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Charts</title>
+    <title>Dashboard</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-    <h1>Charts</h1>
-    <iframe src="{{ chart1 }}" width="800" height="600"></iframe><br>
-    <iframe src="{{ chart2 }}" width="800" height="600"></iframe>
+        </canvas>
+
+    <script>
+        // ... Chart.js code (same as before)
+    </script>
+
 </body>
 </html>
