Add generated HTML file 3

--- a/templates/dashboard_3.html
+++ b/templates/dashboard_3.html
@@ -1,3 +1,4 @@
+<!-- templates/error.html -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -5,7 +6,5 @@
 </head>
 <body>
     <h1>Error</h1>
-    <p>{{ error_message }}</p>
-    <a href="/">Go back</a>
-</body>
+    <p>{{ error_message }}</p>  </body>
 </html>
