--- a/templates/dashboard_1.html
+++ b/templates/dashboard_1.html
@@ -1,4 +1,3 @@
-<!-- dashboard.html -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,11 +7,16 @@
 <body>
     <h1>Sales Dashboard</h1>
 
-    <canvas id="salesByRegion" width="400" height="200"></canvas>
-    <canvas id="salesByProduct" width="400" height="200"></canvas>
-    <canvas id="salesTrend" width="400" height="200"></canvas>
-    <canvas id="salesByRegionProduct" width="400" height="200"></canvas>
-    <canvas id="avgSalesPerMonth" width="400" height="200"></canvas>
+    <div style="width: 50%;">
+        <canvas id="salesByRegionChart"></canvas> </div>
+    <div style="width: 50%;">
+        <canvas id="salesByProductChart"></canvas> </div>
+    <div style="width: 50%;">
+        <canvas id="salesTrendChart"></canvas> </div>
+    <div style="width: 50%;">
+        <canvas id="averageSalesByRegionChart"></canvas> </div>
+    <div style="width: 50%;">
+        <canvas id="topSellingProductChart"></canvas> </div>
 
     <script src="scripts.js"></script>
 </body>
