--- a/templates/dashboard_1.html
+++ b/templates/dashboard_1.html
@@ -2,22 +2,16 @@
 <html>
 <head>
     <title>Sales Dashboard</title>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <h1>Sales Dashboard</h1>
-
-    <div style="width: 50%;">
-        <canvas id="salesByRegionChart"></canvas> </div>
-    <div style="width: 50%;">
-        <canvas id="salesByProductChart"></canvas> </div>
-    <div style="width: 50%;">
-        <canvas id="salesTrendChart"></canvas> </div>
-    <div style="width: 50%;">
-        <canvas id="averageSalesByRegionChart"></canvas> </div>
-    <div style="width: 50%;">
-        <canvas id="topSellingProductChart"></canvas> </div>
-
-    <script src="scripts.js"></script>
+    <div>
+        <img src="charts/chart1.png" alt="Total Sales by Region">
+        <img src="charts/chart2.png" alt="Total Sales by Product">
+    </div>
+    <div>
+        <img src="charts/chart3.png" alt="Average Sales by Region">
+        <img src="charts/chart4.png" alt="Sales of Product 'C' by Region">
+    </div>
 </body>
 </html>
